Fixed expert person text alignment.

--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -11740,6 +11740,16 @@ body.dark-mode .text-dark i {
   text-align: center; /* Center text */
 }
 
+.expert-persona {
+  display: flex;
+  flex-direction: column; 
+  align-items: center; 
+  text-align: center; 
+  margin-bottom: 29px;
+}
+
+
+
 .footer-icon {
   text-decoration: none !important; /* Removes white underline */
   display: inline-flex; /* Makes sure all icons are aligned */
